gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-trace_macros.rs
fn main() {
    trace_macros!(true); // { dg-error ".E0658." "" { target *-*-* } }
}

